updated dependencies and modern Java language refactoring, adds koryk GWA test code, removes xml serialization